# Rust-Neural-Net

./: Cargo.toml  LICENSE
benches/: matrix.rs
src/: activation.rs  data.rs  layer.rs  lib.rs  main.rs  matrix.rs  network.rs
src/tests/: matrix.rs
